# Learning-BeautifulSoup4

./: .gitignore  README.md  pyproject.toml
apps-uv/notebook/: BeautifulSoup.ipynb  output0.xhtml  output1.xhtml  pyproject.toml
apps-uv/quick-start/: main.py  pyproject.toml
apps-uv/quick-start/sample/: sample.html
notes/: general.md
